@@ -1,11 +1,18 @@
 # exportPattern("^[[:alpha:]]+") #
 
-export(contFrac, ratFarey)
+export(contFrac)
+export(coprime)
 export(droplet_e)
 export(eulersPhi)
-export(Primes, twinPrimes, nextPrime, previousPrime)
 export(factorize)
-export(isNatural, isPrime, isIntpower)
+export(GCD, LCM, extGCD)
+export(isIntpower)
+export(isNatural)
+export(isPrime)
+export(modinv)
+export(modlin)
 export(moebius, mertens)
 export(omega, Omega)
+export(Primes, twinPrimes, nextPrime, previousPrime)
+export(ratFarey)
 export(sigma, tau)
