@@ -41,9 +41,6 @@
 \value{
   vector of integers representing prime numbers
 }
-\author{
-  HwB \email{hwborchers@googlemail.com}
-}
 \seealso{
   \code{\link{isPrime}, \link{factorize}}
 }
